--- a/examples/client_web/index.html
+++ b/examples/client_web/index.html
@@ -26,37 +26,39 @@
     />
 
     <script type="module">
-      import { createClient } from "http://127.0.0.1:5500/client/browser.esm.js";
+      import {
+        createClient,
+        Auth,
+      } from "http://127.0.0.1:5500/client/browser.esm.js";
 
-      const reactive = createClient("http://localhost:4000");
-      const users = reactive();
+      const url = "http://localhost:4000";
 
-      users.connectTo("users", () => {
-        console.log("connected to testing");
+      const auth = new Auth(url);
+
+      const token = await auth.loginWithEmailAndPassword(
+        "erick@softver-tech.com",
+        "12345678"
+      );
+
+      const ReactiveDB = createClient(url, token);
+
+      const client = ReactiveDB();
+
+      client.connectTo("Auth_users", () =>
+        console.log("connected to Auth_users")
+      );
+
+      client.on("value", (data, event) => {
+        console.log({ data, event });
       });
 
-      users.on("value", (data, event) => {
-        console.log(data, event);
+      client.onClose(() => {
+        console.log("disconnected to Auth_users");
       });
-
-      users.onClose(() => {
-        console.log("closed");
-      }).add({ from: "disconned", ok: true })
-
-      document.querySelector("#btn").addEventListener("click", () => {
-        users.add({ name: "erick", id: "sosa" });
-      });
-
-      // document.querySelector("#update").addEventListener("click", () => {
-      //   users.set("61cb4b61ef9a8a1346d4d81f", {
-      //     number: `Erick ${Math.random()}`,
-      //   });
-      // });
 
       document.querySelector("#btns").addEventListener("click", () => {
-        users.remove("63b05d560a00316db1839844");
+        client.add({ object: true });
       });
-
     </script>
   </body>
 </html>
